@@ -3,8 +3,10 @@ package net.zscript.model.templating.adapter;
 import java.net.URI;
 import java.net.URISyntaxException;
 import java.nio.file.FileSystem;
+import java.util.Arrays;
 import java.util.List;
 
+import static java.util.Collections.emptyList;
 import static java.util.Collections.singletonList;
 import static org.assertj.core.api.Assertions.assertThat;
 import static org.assertj.core.api.Assertions.assertThatExceptionOfType;
@@ -22,16 +24,16 @@ class LoadableEntitiesTest {
     @Test
     void shouldProductListOfLoadedEntities() throws URISyntaxException {
         final URI          rootPath = new URI("file:///foo/");
-        final List<String> relPaths = List.of("bar", "baz/");
+        final List<String> relPaths = Arrays.asList("bar", "baz/");
         final String       suffix   = "java";
 
         final LoadableEntities le = new LoadableEntities("desc", rootPath, relPaths, suffix, fs);
 
-        final List<LoadedEntityContent> result = le.loadEntities(entity -> {
-            return singletonList(entity.withContents(
-                    List.of("content+" + entity.getRelativePath()),
-                    fs.getPath("a").resolve(entity.getRelativePath())));
-        });
+        final List<LoadedEntityContent> result = le.loadEntities(
+                entity -> singletonList(entity.withContents(
+                        singletonList("content+" + entity.getRelativePath()),
+                        fs.getPath("a").resolve(entity.getRelativePath())))
+        );
 
         assertThat(result)
                 .hasSize(2)
@@ -42,22 +44,23 @@ class LoadableEntitiesTest {
                         LoadedEntityContent::getRootPath,
                         LoadedEntityContent::getFullPath)
                 .containsExactly(
-                        tuple(List.of("content+bar"), fs.getPath("a/bar"), "desc", "bar", new URI("file:///foo/"), new URI("file:///foo/bar")),
-                        tuple(List.of("content+baz/"), fs.getPath("a/baz/"), "desc", "baz/", new URI("file:///foo/"), new URI("file:///foo/baz/")));
+                        tuple(singletonList("content+bar"), fs.getPath("a/bar"), "desc", "bar", new URI("file:///foo/"), new URI("file:///foo/bar")),
+                        tuple(singletonList("content+baz/"), fs.getPath("a/baz/"), "desc", "baz/", new URI("file:///foo/"), new URI("file:///foo/baz/")));
     }
 
     @Test
     void shouldRejectAbsoluteEntityPath() {
-        assertThatExceptionOfType(IllegalArgumentException.class).isThrownBy(() -> {
-            new LoadableEntities("desc", new URI("/foo/"), List.of("/bar"), "java", fs).loadEntities(e -> List.of());
-        }).withMessageStartingWith("relativePath is absolute");
+        assertThatExceptionOfType(IllegalArgumentException.class)
+                .isThrownBy(() -> new LoadableEntities("desc", new URI("/foo/"), singletonList("/bar"), "java", fs)
+                        .loadEntities(e -> emptyList()))
+                .withMessageStartingWith("relativePath is absolute");
     }
 
     @Test
     void shouldRejectAbsoluteOutputPath() {
-        assertThatExceptionOfType(IllegalArgumentException.class).isThrownBy(() -> {
-            new LoadableEntities("desc", new URI("/foo/"), List.of("bar"), "java", fs)
-                    .loadEntities(e -> List.of(e.withContents(List.of(""), fs.getPath("/baz"))));
-        }).withMessageStartingWith("relativeOutputPath is absolute");
+        assertThatExceptionOfType(IllegalArgumentException.class)
+                .isThrownBy(() -> new LoadableEntities("desc", new URI("/foo/"), singletonList("bar"), "java", fs)
+                        .loadEntities(e -> singletonList(e.withContents(singletonList(""), fs.getPath("/baz")))))
+                .withMessageStartingWith("relativeOutputPath is absolute");
     }
 }
